[project]
authors = [
  {name = "Yuxiang Wei", email = "yuxiang630.wei@gmail.com"},
]
dependencies = [
    "openai>=1.2.2",
    "transformers>=4.35.0",
    "torch>=2.1.0",
    "tiktoken>=0.5.1",
    "GitPython>=3.1.40",
    "datasets>=2.14.6",
    "numpy>=1.26.1",
    "sentence-transformers>=2.2.2",
    "tenacity>=8.2.3",
]
description = "Magicoder: Source Code Is All You Need"
license = {text = "MIT"}
name = "Magicoder"
readme = "README.md"
requires-python = ">=3.10,<3.13"
version = "0.1.0"

[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.17.2",
    "pre-commit>=3.5.0",
    "accelerate>=0.24.1",
    "mypy>=1.7.0",
    "scikit-learn>=1.3.2",
    "matplotlib>=3.8.1",
    "InstructorEmbedding>=1.0.1",
    "joblib>=1.3.2",
    "termcolor>=2.3.0",
    "evalplus @ git+https://github.com/evalplus/evalplus@1895d2f6aa8895044a7cf69defc24bd57695e885",
    "bigcode-eval @ git+https://github.com/bigcode-project/bigcode-evaluation-harness@be2a44c2faa29c20b5041d7083acb698eb373309",
]
test = [
  "pytest>=7.4.3",
]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]

[tool.black]
include = '\.pyi?$'
line-length = 88
target-version = ["py310"]

[tool.isort]
line_length = 88
profile = "black"
skip_gitignore = true

[tool.mypy]
check_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
# modules = ["main"]
mypy_path = "src"
packages = ["magicoder"]
python_version = "3.10"
